--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <!-- ────────────────── SALE BANNER ─────────────────── -->
-<div id="sale-banner">Launch Sale — 25% Off!</div>
+<div id="sale-banner">Launch Sale&nbsp;— Use code "scatter" for 25% off!</div>
 
 <body>
   <!-- ─────────────────── HERO ─────────────────── -->
