--- a/index.html
+++ b/index.html
@@ -147,17 +147,16 @@
       <div class="card">
         <img src="img/Open scatter combined.gif" alt="Powerful Scatter Options" class="trad-img">
         <div class="trad-title">Powerful Scatter Options</div>
-        <p class="trad-desc">Scatter options include pattern, height, proximity and more.</p>
+        <p class="trad-desc">Such as Noise, Rows, Height, Proximity & More</p>
       </div>
       <div class="card">
         <img src="img/optimization combines.gif" alt="Slope &amp; altitude" class="trad-img">
         <div class="trad-title">Optimization Tools</div>
-        <p class="trad-desc">Speed up viewport performance with the following features. camera culling, proxy objects</p>
+        <p class="trad-desc">Speed up viewport performance with Camera Culling, Proxy Objects & More</p>
       </div>
       <div class="card">
         <img src="img/animation.gif" alt="Pattern based scatter" class="trad-img">
         <div class="trad-title">Animation Support</div>
-        <p class="trad-desc">Wind, object collision</p>
       </div>
     </div>
   </section>
