--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <h2>Watch Trailer</h2>
     <div class="trailer-video">
       <iframe
-        src="https://www.youtube.com/embed/VIDEO_ID?rel=0&amp;modestbranding=1&amp;playsinline=1"
+        src="https://www.youtube.com/embed/sFCY171RUwM?si=ye_FJLtsVT2_EUqZ"
         title="ScatterFlow Trailer"
         allowfullscreen
       ></iframe>
