--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <p style="max-width:var(--max-w);margin:0 auto 2.5rem;color:var(--txt-muted);text-align:center">
       For artists who prefer classic geometry‑node workflows, ScatterFlow partners with
       <strong><a href="https://superhivemarket.com/products/openscatter?search_id=40961755" target="_blank" rel="noopener noreferrer">Open&nbsp;Scatter</a></strong>
-      to bring a full suite of node‑based scatter tools—right alongside our physics features.
+     —an open-source toolset—to bring a full suite of node‑based scatter tools, right alongside our physics features.
     </p>
 
     <div class="grid">
