--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 </head>
 
 <!-- ────────────────── SALE BANNER ─────────────────── -->
-<div id="sale-banner">Launch Sale&nbsp;— Use code "scatter" for 25% off!</div>
+<div id="sale-banner">
+  <span class="ending-soon">ENDING&nbsp;SOON&nbsp;→</span>
+  Launch Sale — 25% OFF with code “scatter”
+</div>
 
 <body>
   <!-- ─────────────────── HERO ─────────────────── -->
