--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <!-- ────────────────── SALE BANNER ─────────────────── -->
-
+<div id="sale-banner">Limited Time Only! Extended Sale — Use code "limited" for 20% off!</div>
 
 <body>
   <!-- ─────────────────── HERO ─────────────────── -->
