--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- 2 — Single‑Click Physics Activation -->
     <section class="feature">
       <div class="text">
-        <h2>Drop objects with a single click</h2>
+        <h2>Drop objects with a single click(Lite)</h2>
         <p>Make selected objects fall with one click. No complicated setups—just press and drop.</p>
       </div>
       <div class="video">
