--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <!-- ────────────────── SALE BANNER ─────────────────── -->
-<div id="sale-banner">Limited Time Only! Extended Sale — Use code "limited" for 20% off!</div>
 
 <body>
   <!-- ─────────────────── HERO ─────────────────── -->
@@ -40,7 +39,7 @@
     <!-- 2 — Single‑Click Physics Activation -->
     <section class="feature">
       <div class="text">
-        <h2>Drop objects with a single click(Lite)</h2>
+        <h2>Drop objects with a single click</h2>
         <p>Make selected objects fall with one click. No complicated setups—just press and drop.</p>
       </div>
       <div class="video">
